# scp-playroom

./: .gitignore  README.md
living-world/: settings.yaml
living-world/living_world/: config.py
living-world/living_world/dashboard/: app.py  build.py
living-world/living_world/llm/: router.py
living-world/living_world/statmachine/: movement.py
site-zero/: .gitignore  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run-with-redis.sh
site-zero/site_zero/: __init__.py  __main__.py  cli.py  entity_roster.py  gui_map.py  live_lock.py  ollama_client.py  perception.py  perception_pov.py  physics.py  runner.py  seed.py  settings.py  tick_signals.py  world_state.py
site-zero/site_zero/agents/: __init__.py  d_class.py  locomotion.py  scp079.py  scp079_graph.py  scp079_prompts.py  scp173.py
site-zero/site_zero/gui_tk/: __init__.py  entity_personas.py  map_view.py  roleplay_client.py
site-zero/site_zero/memory/: __init__.py  vector_memory.py
site-zero/site_zero/prompts/: scp173_system.txt
site-zero/site_zero/scps/: __init__.py  episodic_context.py  tick_dispatch.py  ticks_top20.py
site-zero/site_zero/templates/: entity_pov.md.j2  scp173_perception.md.j2
site-zero/site_zero/tools/: registry.py
site-zero/site_zero/world/: __init__.py  layout.py
