[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "site-zero"
version = "0.1.0"
description = "Project Site-Zero — GUI-less SCP multi-agent simulation sandbox"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "chromadb>=0.5.0",
]

[project.scripts]
site-zero = "site_zero.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["site_zero*"]
